# Simple-Interpreter

./: .clang-format  .gitignore  CMakeLists.txt  azure-pipelines.yml
src/: CMakeLists.txt
src/cpp/: AST.cpp  Lexer.cpp  Parser.cpp  main.cpp
src/include/: AST.h  Lexer.h  Parser.h  Token.h
